# delta_lake_dev_container

./: .gitignore  Makefile  README.md  notebook.ipynb  other.py  pyproject.toml  python-path.env  test.py
.devcontainer/: Dockerfile  devcontainer.json
input/json/: 2024-12.jsonl  2025-06.jsonl  2025-08.jsonl
jobs/: entrypoint.py
scripts/: 02_deploy_wheel.sh  03_create_job.sh  deploy.sh
src/siemens/: cli.py  spark_util.py  transform.py
tests/: tests.py
